# bachelor-thesis-vulkanrenderingengine

./: .gitignore  CMakeLists.txt  README.md
cmake/: vre_assimp.cmake  vre_doxygen.cmake  vre_logging.cmake  vre_packages.cmake  vre_utility.cmake
projects/: CMakeLists.txt
projects/artr_exercise/: CMakeLists.txt  main.cpp  vertex_layout_artr.hpp
projects/artr_exercise/resources/shaders/: compile.bat  shader_clown.vert  shader_clown_vert.spv  shader_color_frag.spv  shader_color_vert.spv
projects/gui_example/: CMakeLists.txt  main.cpp
projects/gui_example/resources/shaders/: compile.bat  shader_color_vert.spv
projects/gui_rotation/: CMakeLists.txt  main.cpp  rotation.ui  slider_callback.hpp
projects/gui_rotation/resources/shaders/: shader_color.frag
projects/phong_shading/: CMakeLists.txt  main.cpp  ub_phong.cpp  ub_phong.hpp  vl_phong.cpp  vl_phong.hpp
projects/phong_shading/resources/shaders/: compile.bat  shader_phong.frag  shader_phong.vert  shader_phong_frag.spv  shader_phong_vert.spv
projects/project_template/: CMakeLists.txt  main.cpp
projects/render_target_example/: CMakeLists.txt  main.cpp
projects/render_target_example/resources/shaders/: shader_texture.frag
projects/transparent_objects/: CMakeLists.txt  main.cpp
projects/transparent_objects/resources/shaders/: compile.bat  shader_color_frag.spv
vre_lib/: CMakeLists.txt  Doxyfile.in  common.hpp  project_relevant_headers.hpp  resource_path.cpp.in
vre_lib/core/: error_handling.cpp  error_handling.hpp  project.cpp  project.hpp  vre.cpp  vre.hpp  vre_configuration.hpp  vre_core.cpp  vre_core.hpp  vre_mainwindow.cpp  vre_mainwindow.hpp  vre_mainwindow.ui  vulkan_3d_view_widget.hpp  vulkan_window.cpp  vulkan_window.hpp
vre_lib/file_system/: file_system.cpp  file_system.hpp
vre_lib/input_manager/: input_listener.cpp  input_listener.hpp  input_manager.cpp  input_manager.hpp  vre_input_listener.cpp  vre_input_listener.hpp
vre_lib/scene_helper/: scene_helper.cpp  scene_helper.hpp
vre_lib/scene_helper/descriptor_set_layouts/: dsl_color.hpp  dsl_texture.hpp
vre_lib/scene_helper/uniform_buffers/: ub_color.cpp  ub_color.hpp  ub_render_target.cpp  ub_render_target.hpp  ub_texture.cpp  ub_texture.hpp
vre_lib/scene_helper/utility/: vertex_buffer_creator.cpp  vertex_buffer_creator.hpp
vre_lib/scene_helper/vertex_layouts/: vl_color.cpp  vl_color.hpp  vl_texture.cpp  vl_texture.hpp
vre_lib/scene_manager/: scene.cpp  scene.hpp  scene_manager.cpp  scene_manager.hpp
vre_lib/scene_manager/drawable_properties/: drawable_property.cpp  drawable_property.hpp  mesh.cpp  mesh.hpp  model_transformation.hpp  render_target.cpp  render_target.hpp  shaders.cpp  shaders.hpp  texture_2d.cpp  texture_2d.hpp
vre_lib/scene_manager/scene_objects/: camera.cpp  camera.hpp  drawable.cpp  drawable.hpp  node.cpp  node.hpp
vre_lib/scene_reader/: scene_reader.cpp  scene_reader.hpp  transformation_node.cpp  transformation_node.hpp
vre_lib/scene_reader/definitions/: drawable_vector.hpp  shadercombination_drawable_mapping.hpp
vre_lib/scene_reader/structs/: drawable_data.hpp  vertex_and_index_buffer.hpp
vre_lib/shader_manager/: descriptor_set_layout.cpp  descriptor_set_layout.hpp  shader.cpp  shader.hpp  shader_combination.cpp  shader_combination.hpp  shader_manager.cpp  shader_manager.hpp  uniform_buffer.cpp  uniform_buffer.hpp  vertex_layout.hpp
vre_lib/shader_manager/shaders/: compute_shader.cpp  compute_shader.hpp  fragment_shader.cpp  fragment_shader.hpp  geometry_shader.cpp  geometry_shader.hpp  tessellation_shader.cpp  tessellation_shader.hpp  vertex_shader.cpp  vertex_shader.hpp
vre_lib/vulkan_interface/: vulkan_interface.cpp  vulkan_interface.hpp
vre_lib/vulkan_manager/: buffer.cpp  buffer.hpp  command_pool.cpp  command_pool.hpp  helper_structs.hpp  image.cpp  image.hpp  logical_device.cpp  logical_device.hpp  physical_device.cpp  physical_device.hpp  swapchain.cpp  swapchain.hpp  texture_sampler.cpp  texture_sampler.hpp  vulkan_configuration.hpp  vulkan_instance.cpp  vulkan_instance.hpp  vulkan_manager.cpp  vulkan_manager.hpp  vulkan_memory_manager.cpp  vulkan_memory_manager.hpp
vre_lib/vulkan_renderer/: renderer.cpp  renderer.hpp  renderer_object.hpp
vre_lib/vulkan_renderer/vre_renderer/: vre_attachments.cpp  vre_attachments.hpp  vre_commandbuffer.cpp  vre_commandbuffer.hpp  vre_commandpool.cpp  vre_commandpool.hpp  vre_drawer.cpp  vre_drawer.hpp  vre_framebuffer.cpp  vre_framebuffer.hpp  vre_graphicspipelines.cpp  vre_graphicspipelines.hpp  vre_renderer.cpp  vre_renderer.hpp  vre_renderlist.cpp  vre_renderlist.hpp  vre_renderpass.cpp  vre_renderpass.hpp
vre_lib/vulkan_renderer/vre_renderer/structs/: drawable_list.hpp  vre_pipelineset.hpp  vre_rendertarget_info.hpp
